docs: ADR-003.md and Evidence.md have been wrote.

--- a/docs/adr/ADR-003.md
+++ b/docs/adr/ADR-003.md
@@ -1,50 +1,46 @@
-# ADR-<ID>: <Title of Decision>
+# ADR-3: FastAPI Service Baseline
 
 **Status:** `Accepted`  
-**Date:** `<YYYY-MM-DD>`  
-**Decision Makers:** `<List of people or roles involved>`  
-**Related ADRs:** `<IDs or links to related ADRs, if any>`  
+**Date:** `2025-11-24`
+**Decision Makers:** `Sina Naghipour`  
 
 ---
 
 ## Context
-Explain the **problem or situation** that requires a decision. Include background, constraints, and why this decision is relevant.
+we needed to build fastapi services to have up and running services while each of them are in a seperate container.
 
 Questions to answer here:  
-- What are we trying to solve?  
-- What alternatives exist?  
-- Why is a decision needed now?  
+- What are we trying to solve?  -> building a ecommerce microservice base services.
+- What alternatives exist? -> monolith approach.
+- Why is a decision needed now?  -> need to decide the architecture and the flow of development.
 
 ---
 
 ## Decision
-State the **chosen solution clearly**. Include enough detail so someone reading later understands exactly what was decided.
+In this stage we have built services needed to have up and running api without any database, and we did this by using microservice approach.
 
 Questions to answer here:  
-- What approach are we taking?  
-- What technologies, patterns, or methods will be used?  
-- How does this decision solve the problem from the context?  
+- What approach are we taking? -> microservice approach.
+- What technologies, patterns, or methods will be used? -> we used `docker`, `pytest`,  `nginx` for reverse proxy, `fastapi`, and some more.
+- How does this decision solve the problem from the context?  -> now that we accepted the pain of upfront cost, it is a piece of cake to develop it from now on, we can add databases, features, other functionalities much easier.
 
 ---
 
 ## Consequences
-Describe the **implications** of this decision. Include positive and negative outcomes, technical debt, and any trade-offs.
-
+trade-off between monolith app and microservice is probably complexity, the ability to mange each section, testing them and etc.
 Questions to answer here:  
-- What benefits do we gain?  
-- What costs, risks, or limitations are introduced?  
-- How does this affect future decisions or system components?  
+- What benefits do we gain? -> easy to develop and test services.
+- What costs, risks, or limitations are introduced? -> huge upfront cost, much more decisions to be made, etc.
+- How does this affect future decisions or system components?  -> we can customize each service to what it actually needs.
 
 ---
 
 ## Alternatives Considered
-(Optional, but recommended) List the **other approaches considered** and why they were rejected.
+monolith development of these services could also work, but we wish to use different databases based on needs of each service.
 
 Questions to answer here:  
-- Alternative A – why it was not chosen  
-- Alternative B – why it was not chosen  
+- Monolith - harder to maintain and customzie for each service.
 
 ---
 
 ## References
-(Optional) Include links to documentation, RFCs, standards, or other resources that informed the decision.
